Prevented line break in root margin title

--- a/src/index.css
+++ b/src/index.css
@@ -201,6 +201,7 @@ p code {
 .root-margin::after {
   content: "Root Margin";
   position: absolute;
+  width: max-content;
   color: blue;
   top: -1.5rem;
   left: 0;
